issue #524 - messages aligned

--- a/wp-content/themes/walnut/walnut/dev/css/admin.css
+++ b/wp-content/themes/walnut/walnut/dev/css/admin.css
@@ -174,7 +174,15 @@
   opacity: 1;
 }
 
+.table-div{
+  display: table;
+}
 
+.table-cell-div,
+.table-cell-div2{
+  display: table-cell;
+  vertical-align: middle;
+}
 
 
 
